package produit;

public class PizzaFromageStyleBrest extends Pizza {

	public PizzaFromageStyleBrest() {
		this.nom = "Pizza sauce style Brest et fromage";
		this.pate = "PateB";
		this.sauce = "SauceB";
		this.garnitures.add("Parmigiano reggiano rape");
	}
}

