package produit;

public class PizzaFromageStyleStrasbourg extends Pizza {

	public PizzaFromageStyleStrasbourg() {
		this.nom = "Pizza pate Strasbourg et fromage";
		this.pate = "PateS";
		this.sauce = "SauceS";
		this.garnitures.add("Mozzarella en lamelles");
	}
}
